# sqlsense

./: .gitignore  CONTRIBUTING.md  README.md  ZIP_SETUP.md  pyproject.toml
.github/workflows/: test.yml
docs/: index.html
examples/: demo.py
sqlsense/: __init__.py  __main__.py  audit.py  cli.py  connectors.py  guardrails.py  sample_config.py  server.py  zip_config.py
tests/: test_sqlsense.py
